--- a/package.json
+++ b/package.json
@@ -66,7 +66,9 @@
     "redux-thunk": "^2.3.0",
     "request": "^2.88.2",
     "sequelize": "^5.3.1",
-    "socket.io": "^2.2.0"
+    "socket.io": "^2.2.0",
+    "spotify-web-api-js": "^1.2.0",
+    "spotify-web-api-node": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
