--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
     "compression": "^1.7.3",
     "connect-session-sequelize": "^6.1.1",
     "cookie-parser": "^1.4.5",
@@ -58,6 +59,7 @@
     "prop-types": "^15.7.2",
     "querystring": "^0.2.0",
     "react": "^16.13.0",
+    "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
@@ -68,7 +70,8 @@
     "sequelize": "^5.21.5",
     "socket.io": "^2.3.0",
     "spotify-web-api-js": "^1.2.0",
-    "spotify-web-api-node": "^4.0.0"
+    "spotify-web-api-node": "^4.0.0",
+    "styled-components": "^5.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.7",
