--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "dependencies": {
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "chart.js": "^2.9.3",
     "compression": "^1.7.3",
     "connect-session-sequelize": "^6.1.1",
     "cookie-parser": "^1.4.5",
@@ -60,6 +61,7 @@
     "querystring": "^0.2.0",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
