--- a/package.json
+++ b/package.json
@@ -91,8 +91,10 @@
     "@babel/preset-react": "^7.8.3",
     "@babel/register": "^7.8.6",
     "axios-mock-adapter": "^1.16.0",
+    "babel-core": "^6.26.3",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.0.5",
+    "babel-loader": "^8.1.0",
+    "babel-preset-es2015": "^6.24.1",
     "chai": "^4.2.0",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
